# geo-processing-incubator

./: .gitignore  .travis.yml  Cargo.toml  mappers.toml
colorizers/: Cargo.toml
colorizers/src/: gray_scale.rs  lib.rs
mappers/: Cargo.toml
mappers/examples/: gdal_to_png.rs  iron_handler.rs
mappers/src/: errors.rs  gdal_source.rs  lib.rs  main.rs  mappers_handler.rs  wms_service.rs
