[package]
name = "mappers"
version = "0.1.0"
authors = ["Johannes Drönner <droenner@informatik.uni-marburg.de>"]

[dependencies]
num = "0.1"
num-traits = "0.1"
typemap = "0.3"
image = "0.17"
chrono = "0.4"
colorizers = {path = "../colorizers"}
gdal =  {git = "https://github.com/georust/rust-gdal.git"}
config = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "*"
futures = "0.1.14"
hyper = "0.11.2"
url = "1.6"